--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Curso JSTDD",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core tests/**/*.spec.js --reporter=spec --bail",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --reporter=spec --bail --watch",
     "lint": "./node_modules/.bin/eslint /src*.js",
     "prepush": "npm run lint",
