--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "jstdd-spotify-Wrapper",
   "version": "1.0.0",
   "description": "Curso JSTDD - Simple wrapper for Spotify API.",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
+    "clear": "rimraf lib",
+    "bbuild": "./node_modules/.bin/babel --out-dir lib src",
+    "build": "npm run clear && npm run bbuild",
+    "build:watch": "npm run build -- --watch",
+    "build:umd": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.js",
+    "build:umd:min": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.min.js -p",
+    "build:all": "npm run build && npm run build:umd && npm run build:umd:min",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --reporter=spec --watch",
     "lint": "./node_modules/.bin/eslint /src*.js",
     "prepush": "npm run lint && npm run test:coverage",
-    "build": "./node_modules/.bin/webpack --colors --progress",
+    "buildwp": "./node_modules/.bin/webpack --colors --progress",
     "watch": "npm run build -- --watch",
     "server": "./node_modules/.bin/webpack-dev-server --inline --open",
     "test:coverage": "nyc npm test"
@@ -41,6 +48,7 @@
   "homepage": "https://github.com/lfdo20/jstdd_spotifyWrapper#readme",
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -55,7 +63,12 @@
     "eslint-plugin-react": "^7.5.1",
     "husky": "^0.14.3",
     "mocha": "^5.0.0",
+    "node-fetch": "^1.7.3",
     "nyc": "^11.4.1",
+    "rimraf": "^2.6.2",
+    "sinon": "^4.2.1",
+    "sinon-chai": "^2.14.0",
+    "sinon-stub-promise": "^4.0.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   }
