--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jstdd-spotify-Wrapper",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Curso JSTDD - Simple wrapper for Spotify API.",
-  "main": "./src/index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "clear": "rimraf lib",
     "bbuild": "./node_modules/.bin/babel --out-dir lib src",
@@ -19,8 +19,13 @@
     "watch": "npm run build -- --watch",
     "server": "./node_modules/.bin/webpack-dev-server --inline --open",
     "test:coverage": "nyc npm test",
-    "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls",
+    "prepublish": "npm run build:all"
   },
+  "files": [
+    "dist",
+    "lib"
+  ],
   "nyc": {
     "functions": 80,
     "lines": 80,
